--- a/recipe/static/css/detail.css
+++ b/recipe/static/css/detail.css
@@ -1,3 +1,23 @@
+/* Breadcrumb Grid */
+.breadcrumb {
+    width: min(1200px, 92%);
+    margin: 15px auto 25px;
+    font-size: 16px;
+    color: #444;
+    font-family: 'Playfair Display', serif;
+    font-weight: 500;
+}
+
+.breadcrumb a {
+    text-decoration: none;
+    color: #444;
+    font-weight: 600;
+}
+
+.breadcrumb a:hover {
+    text-decoration: underline;
+}
+
 h1 {
   font-family: 'Playfair Display', serif;
   font-size: 2.5em;   /* adjust as needed */
