--- a/recipe/static/css/main.css
+++ b/recipe/static/css/main.css
@@ -1,6 +1,27 @@
 body {
   background-color: rgb(255,238,140); /* Sets the background color of the entire page */
 }
+
+/* Breadcrumb Grid*/
+.breadcrumb {
+    width: min(1200px, 92%);
+    margin: 15px auto 25px;
+    font-size: 16px;
+    color: #444;
+    font-family: 'Playfair Display', serif;
+    font-weight: 500;
+}
+
+.breadcrumb a {
+    text-decoration: none;
+    color: #444;
+    font-weight: 600;
+}
+
+.breadcrumb a:hover {
+    text-decoration: underline;
+}
+
                                    /* --- RECIPE GRID --- */
 .recipe-list {
     display: grid;
