--- a/recipe/templates/authentication/credentials.html
+++ b/recipe/templates/authentication/credentials.html
@@ -45,6 +45,17 @@
   {% else %}
     <p>Already registered? <a href="{{ url_for('authentication_bp.login') }}">Login here</a></p>
   {% endif %}
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul class="flashes">
+          {% for category, message in messages %}
+            <li class="flash {{ category }}">{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+  {% endwith %}
+
 </div>
 
 </body>
