--- a/recipe/templates/recipe_detail.html
+++ b/recipe/templates/recipe_detail.html
@@ -91,15 +91,11 @@
             <ul>
                 {% for r in reviews %}
                     <li>
-                        <strong>{{ r.user.user_name }}</strong>
+                        <strong>{{ r.username }}</strong>
                         ({{ r.rating }}/5):
                         {{ r.review }}
-                        {% if 'user_name' in session and r.user.user_name == session['user_name'] %}
-                            <form method="POST"
-                                  action="{{ url_for('recipe_bp.remove_review', recipe_id=recipe.id, review_id=r.id) }}">
-                                <button type="submit">Delete</button>
-                            </form>
-                        {% endif %}
+                        <br>
+                        <small>{{ r.date.strftime('%Y-%m-%d %H:%M') }}</small>
                     </li>
                 {% endfor %}
             </ul>
@@ -108,12 +104,14 @@
         {% endif %}
     </div>
 
+
     <!-- Add Review Form -->
     {% if 'user_name' in session %}
     <div class="add-review">
         <h3>Add Your Review</h3>
-        <form method="POST">
+        <form method="POST" action="{{ handler_url }}">
             {{ form.hidden_tag() }}
+            {{ form.recipe_id }}
             <div>
                 {{ form.review_text.label }}<br>
                 {{ form.review_text(rows=3) }}
@@ -134,9 +132,8 @@
         </form>
     </div>
     {% else %}
-    <p><a href="{{ url_for('authentication_bp.login') }}">Login</a> to post a review.</p>
+    <p><a href="{{ url_for('authentication_bp.login') }}" class="login-link">Login</a> to post a review.</p>
     {% endif %}
-
 </div>
 
 <footer>
