Done test suite and posting review

--- a/recipe/templates/authentication/credentials.html
+++ b/recipe/templates/authentication/credentials.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}">
 </head>
 <body>
+<header>
+    {% include 'header.html' %}
+</header>
 
 <div class="auth-container">
   <h2>{{ title }}</h2>
@@ -45,17 +48,6 @@
   {% else %}
     <p>Already registered? <a href="{{ url_for('authentication_bp.login') }}">Login here</a></p>
   {% endif %}
-
-  {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        <ul class="flashes">
-          {% for category, message in messages %}
-            <li class="flash {{ category }}">{{ message }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-  {% endwith %}
-
 </div>
 
 </body>
