--- a/recipe/static/css/forms.css
+++ b/recipe/static/css/forms.css
@@ -106,3 +106,35 @@ label {
 .auth-container a:hover {
   text-decoration: underline;
 }
+
+.flashes {
+    margin: 10px auto;
+    max-width: 600px;
+}
+
+.flash {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.flash.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.flash.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border: 1px solid #bee5eb;
+}
+
+.flash.danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
