--- a/recipe/templates/header.html
+++ b/recipe/templates/header.html
@@ -48,9 +48,15 @@
 
     </div>
       </div>
-
-    </div>
-
+  {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul class="flashes">
+          {% for category, message in messages %}
+            <li class="flash {{ category }}">{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+  {% endwith %}
   </div>
 </header>
 </body>
