--- a/recipe/templates/home.html
+++ b/recipe/templates/home.html
@@ -52,7 +52,7 @@
             {% for category in categories[0:6] %}
                 <li class="category-card">
                     <a href="{{ url_for('search_bp.search', filter_by='category', q=category.name) }}">
-
+                        <img src="{{ category.recipes[0].images[0] }}" alt="Category Image">
                         <p class="name">{{ category.name }}</p>
                     </a>
                 </li>
